browser-app/src/index.css
/* ... */
.custom-modal .modal-content {
  border: none;
  border-radius: unset;
  background-color: transparent;
}
video {
  display: block;
  width: 100%;
  height: 100%;
  object-fit: contain;
  background-color: transparent;
  transition: visibility 0.3s, opacity 0.3s linear;
}
video:focus {
  outline: none;
}

/*Item Card*/
.custom-card {
  position: relative;
  /*box-shadow: rgba(154, 161, 171, 0.15) 0px 0px 35px 0px;*/
  /*box-shadow: 0 2px 15px -3px rgba(0,0,0,0.07),0 10px 20px -2px rgba(0,0,0,0.04);*/
  /*box-shadow: rgba(0, 0, 0, 0.2) 0px 2px 1px -1px, rgba(0, 0, 0, 0.14) 0px 1px 1px 0px, rgba(0, 0, 0, 0.12) 0px 1px 3px 0px;*/
  box-shadow: 0 .125rem .25rem rgba(0,0,0,.075); /*.shadow-sm*/
  border: none;
  border-radius: 4px;
}
.custom-card-image {
  position: relative;
  cursor: pointer;
}
.custom-card-image .custom-mask {
  opacity: 0;
  transition: all .3s ease-in-out;
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  width: 100%;
  height: 100%;
  overflow: hidden;
  background: rgba(158, 158, 158, 0.1) fixed;
}
.custom-card-image .custom-mask:hover {
  opacity: 1;
}
.card-img-top {
  border-top-left-radius: 4px;
  border-top-right-radius: 4px;
}
.flex-center {
  display: flex;
  align-items: center;
  justify-content: center;
  height: 100%;
}
.custom-card-body {
  padding: 0.4rem 0.75rem;
}
.custom-card-text {
  cursor: default;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  font-size: 15px;
  font-weight: 600;
  color: rgb(108, 117, 125);
}
.custom-card-popover {
  position: absolute;
  top: 6px;
  left: 7px;
  padding: 3px 8px;
  background-color: rgba(0,0,0,0.5);
  border-radius: 3px;
  font-size: 11px;
  line-height: 1.15;
  color: #fff;
  text-align: center;
  z-index: 1;
}

/*Toggle view button*/
.custom-toggle-view-button {
  color: #6c757d;
  border-color: #DEE2E6;
  background-color: #fff;
  z-index: 1;
}
.custom-toggle-view-button.active,
.custom-toggle-view-button.active > .custom-toggle-view-icon {
  color: #fff;
  background-color: #007bff;
  border-color: #007bff;
}
.custom-toggle-view-button:hover,
.custom-toggle-view-button:active {
  color: #6c757d;
  z-index: 1;
}
.custom-toggle-view-icon {
  color: #8B96A0;
}

/*ListViewItemComponent*/
.custom-list-view-item {
  display: flex;
  cursor: pointer;
  transition: .3s ease;
}
.custom-list-view-item:hover {
  color: #007bff;
  box-shadow: 0 .25rem 1rem rgba(0,0,0,.075)!important;
}
.custom-list-view-item img {
  border-top-left-radius: calc(.25rem - 1px);
  border-bottom-left-radius: calc(.25rem - 1px);
  width: 100%;
}
.custom-list-view-item .custom-mask {
  opacity: 0;
  transition: .3s ease;
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  width: 100%;
  height: 100%;
  border-top-left-radius: calc(.25rem - 1px);
  border-bottom-left-radius: calc(.25rem - 1px);
  overflow: hidden;
  background: rgba(158, 158, 158, 0.1) fixed;
}
.custom-list-view-item:hover .custom-mask {
  opacity: 1;
}
.custom-list-view-size {
  min-width: 100px;
}
.custom-list-view-item-left {
  flex: 0 0 150px;
  position: relative;
}
.custom-list-view-item-right {
  flex: 1;
}

/*Custom col for items grid view*/
.custom-col {
  padding-left: 12px;
  padding-right: 12px;
  /*margin-bottom: 15px;*/
}



/*FOR TEST*/
.test-header {
  position: fixed;
  top: 0;
  right: 0;
  left: 0;
  height: 70px;
  z-index: 1030;
  background-color: white;
  /*border-bottom: 1px solid #DEE2E6;*/
  box-shadow: rgba(154, 161, 171, 0.15) 0px 0px 35px 0px;
  /*box-shadow: rgba(0, 0, 0, 0.05) 0 0 8px 0;*/
}
.test-sidebar {
  position: fixed;
  top: 70px;
  left: 0;
  width: 260px;
  min-width: 260px;
  max-height: calc(100vh - 70px);
  min-height: calc(100vh - 70px);
  overflow: auto;
  z-index: 1020;
  background-color: #313A46;
  scrollbar-gutter: stable;
  /*border-right: 1px solid #DEE2E6;*/
}
.test-content-outer {
  position: fixed;
  top: 70px;
  left: 260px;
  min-height: 100vh;
  width: calc(100vw - 260px);
}
.test-content-inner {
  background-color: lightgoldenrodyellow;
  padding: 40px 40px 40px 40px;
  max-height: calc(100vh - 70px);
  min-height: calc(100vh - 70px);
  overflow-y: auto;
}




/*Wrappers*/
.custom-items-with-pagination-and-toolbar-wrapper {
  background-color: #FAFBFE;
  padding: 0px 12px 40px 12px;
  max-height: calc(100vh - 70px);
  min-height: calc(100vh - 70px);
  overflow-y: auto;
}
.inner {
  padding-top: 30px;
  min-height: calc(100vh - 70px - 0px - 40px);
  display: flex;
  flex-direction: column;
}
.custom-toolbar-wrapper {
  margin-bottom: 26px;
}
.custom-items-wrapper {
  margin-bottom: 4px;
  /*padding: 32px 7px 16px 8px;*/
  /*background-color: lightblue;*/
}
.custom-pagination-wrapper {
  min-height: 38px;
  /*background-color: green;*/
  flex-grow: 3;
  position: relative;
  /*margin-bottom: 20px;*/
}
.custom-pagination-wrapper > div {
  position: absolute;
  bottom: 0;
}
.custom-scroll-top-div {
  position: fixed;
  bottom: 40px;
  right: 41px;
}
.custom-landing-wrapper,
.custom-not-found-wrapper {
  height: 100vh;
}
.custom-not-found-wrapper {
  background: linear-gradient(to right, #fc00ff, #00dbde);
}

/*Custom scrollbar*/
/*For Sidebar*/
.test-sidebar::-webkit-scrollbar {
  width: 8px;
}
/*Firefox*/
.test-sidebar {
  scrollbar-width: thin;
  scrollbar-color: #69747F transparent;
}
.test-sidebar::-webkit-scrollbar-track {
  border-radius: 4px;
}
.test-sidebar::-webkit-scrollbar-thumb {
  border-radius: 4px;
  border: 0px solid transparent;
  background-clip: content-box;
  /*background-color: transparent;*/
  background-color: #69747F;
}
.test-sidebar:hover::-webkit-scrollbar-thumb {
  /*background-color: #69747F;*/
}
/*For content*/
.custom-items-with-pagination-and-toolbar-wrapper::-webkit-scrollbar {
  width: 8px;
}
/*Firefox*/
.custom-items-with-pagination-and-toolbar-wrapper {
  scrollbar-width: thin;
  scrollbar-color: #69747F transparent;
}
.custom-items-with-pagination-and-toolbar-wrapper::-webkit-scrollbar-track {
  border-radius: 4px;
}
/* ... */

